CLO-27180 - Review and remove --add-opens and --add-exports
- parameters for greenmail added to all places including product